# codex-stuff-one-umbrella

./: .gitignore  README.md
agents/: README.md
agents/.mnemosyne/: config.toml
agents/scripts/: gen_openai_yaml.py  install.sh
agents/skills/agency-accessibility-auditor/: SKILL.md
agents/skills/agency-accessibility-auditor/agents/: openai.yaml
agents/skills/agency-agentic-identity-trust-architect/: SKILL.md
agents/skills/agency-bilibili-content-strategist/: SKILL.md
agents/skills/agency-government-digital-presales-consultant/: SKILL.md
agents/skills/agency-kuaishou-strategist/: SKILL.md
agents/skills/agency-linkedin-content-creator/: SKILL.md
agents/skills/agency-live-spec-enforcer/: SKILL.md
agents/skills/agency-recruitment-specialist/: SKILL.md
agents/skills/agency-roblox-avatar-creator/: SKILL.md
agents/skills/agency-study-abroad-advisor/: SKILL.md
agents/skills/agency-supply-chain-strategist/: SKILL.md
agents/skills/agency-tiktok-strategist/: SKILL.md
agents/skills/agency-weibo-strategist/: SKILL.md
agents/skills/agency-zk-steward/: SKILL.md
agents/skills/rtk-safe-usage/: SKILL.md
config/: config.toml
memory/: README.md  config.toml  pyproject.toml
memory/config/: codex.config.template.toml
memory/docs/: architecture.md  cli-reference.md  integration.md  workstation-memory.md
memory/src/codex_memory/: __init__.py  cli.py  compiler.py  config.py  models.py  native_extension.py  promotion.py  retrieval.py  store.py  utils.py
memory/tests/: test_system.py
personas/: vex.md
(+150 files in other folders)
