[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-memory"
version = "0.1.0"
description = "Low-token persistent memory sidecar for Codex-style agents"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
codex-memory = "codex_memory.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
